2013-02-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/openvassd.c (main): Update year in copyright notice.

2013-02-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 3.4+beta3.

2013-02-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Move "-Werror" flag to the "Debug" build type.

	* CMakeLists.txt: Move "-Werror" from CMAKE_C_FLAGS to
	CMAKE_C_FLAGS_DEBUG to keep it out of the "Release" build type.

2013-02-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* CHANGES: Updated.

2013-02-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-scanner 3.4+beta2 release.

	* CHANGES: Updated.

2013-02-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plug_info): Refactor code to remove fixed size of
	string regrouping nvt elements and calculate size dynamically.
	Rename variables to be more readable.

2013-02-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plug_info): Escape new lines in script tags when
	sending plugin information.

2013-02-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* tools/openvas-nvt-sync.in: Will now delete scripts not part of the
	feed like greenbone-nvt-sync when using rsync, except for a private 
	directory. These scripts should be migrated by calling the sync script
	with option --migrate-to-private.
	(): Add new command line option --migrate-to-private.
	(IFS0, NEWLINE, PRIVATE_SUBDIR, OPENVAS_KEY_ID, RSYNC_DELETE, CMD_GPG):
	New variables.
	(do_help): Add new option and variable PRIVATE_SUBDIR.
	Change indentation.
	(chk_system_tools): Add warning if GPG is not found.
	(do_rsync): Add RSYNC_DELETE to delete files not part of the feed and
	prompt for migration if no private directory is found.
	(do_migrate_to_private): New function to migrate files without
	an OpenVAS signature to a private subdirectory.
	(check_signature): New helper function to check if a file has an